Changes to the build system (build sources in new directories as libraries).
git-svn-id: https://openmalaria.googlecode.com/svn@140 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -129,7 +129,9 @@ AC_FUNC_ERROR_AT_LINE
 
 AC_CONFIG_FILES([Makefile
                  model/Makefile
-                 xsdcxx/Makefile
+		 model/PresentationModel/Makefile
+		 model/WithinHostModel/Makefile
+		 xsdcxx/Makefile
                  graphics/Makefile])
 
 AC_OUTPUT
