Moved TransmissionModel sources around; renamed NoVectorControl to NonVectorTransmission and VectorControl to VectorTransmission.
git-svn-id: https://openmalaria.googlecode.com/svn@141 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -130,6 +130,7 @@ AC_FUNC_ERROR_AT_LINE
 AC_CONFIG_FILES([Makefile
                  model/Makefile
 		 model/PresentationModel/Makefile
+		 model/TransmissionModel/Makefile
 		 model/WithinHostModel/Makefile
 		 xsdcxx/Makefile
                  graphics/Makefile])
