--- a/trunk/model/Makefile.am
+++ b/trunk/model/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = PresentationModel WithinHostModel
+SUBDIRS = PresentationModel TransmissionModel WithinHostModel
 noinst_PROGRAMS = openMalaria
 openMalaria_SOURCES = openMalaria.cpp\
  GSLWrapper.cpp timer.cpp boincWrapper.cpp\
@@ -6,14 +6,14 @@ openMalaria_SOURCES = openMalaria.cpp\
  drug.cpp proteome.cpp\
  WithinHostModel.cpp\
  intervention.cpp event.cpp human.cpp\
- transmissionModel.cpp noVectorControl.cpp VectorControlInternal.cpp vectorControl.cpp\
+ TransmissionModel.cpp\
  CaseManagementModel.cpp OldCaseManagement.cpp NewCaseManagement.cpp\
  EntoIntervention.cpp\
  PresentationModel.cpp
 
 openMalaria_DEPENDENCIES =  $(top_builddir)/xsdcxx/libxsdcxx.a
 
-openMalaria_LDADD = $(top_builddir)/xsdcxx/libxsdcxx.a PresentationModel/libPresentationModel.a WithinHostModel/libWithinHostModel.a\
+openMalaria_LDADD = $(top_builddir)/xsdcxx/libxsdcxx.a PresentationModel/libPresentationModel.a WithinHostModel/libWithinHostModel.a TransmissionModel/libTransmissionModel.a\
  -L@top_builddir@/lib @LIB_XERC@ @LIB_GSL@ @LIB_GSLCBLAS@ @LIB_BOINC@ @LIB_BOINC_API@ 
 
 AM_CPPFLAGS = @CPPFLAGS@ @BOINC_CFLAGS@ -I$(top_srcdir)/include -I@top_builddir@/xsdcxx
