Checkpointing can now be tested with a command-line option. test.sh and testCheckpointing.sh replaced with a more versatile script named runTests.sh ('./runTests.sh --help' prints usage). The old checkpointTest.xml has become scenario1.xml. Checkpointing is broken for tests 8 and 10!
git-svn-id: https://openmalaria.googlecode.com/svn@143 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -2,14 +2,11 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = xsdcxx model #graphics 
 
 all: xsdcxx model
+	mkdir -p test && test -d test/original || ln -s @abs_top_srcdir@/test/original test/
+	test -x runTests.sh || ln -s @top_srcdir@/runTests.sh ./
 
-test: all test-scenarios test-checkpointing
-
-test-scenarios: all
-	./test.sh ;
-
-test-checkpointing: all
-	./testCheckpointing.sh ;
+test: all
+	./runTests.sh
 
 doxygen: config.doxygen
 	-doxygen config.doxygen
