--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -596,13 +596,10 @@ uninstall-am:
 
 all: xsdcxx model
 
-test: all test-scenarios test-checkpointing
-
-test-scenarios: all
-	./test.sh ;
-
-test-checkpointing: all
-	./testCheckpointing.sh ;
+test: all
+	mkdir -p test && test -d test/original || ln -s @abs_top_srcdir@/test/original test/
+	test -x runTests.sh || ln -s @top_srcdir@/runTests.sh ./
+	./runTests.sh
 
 doxygen: config.doxygen
 	-doxygen config.doxygen
