TransmissionModel windows build updates
git-svn-id: https://openmalaria.googlecode.com/svn@145 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/malariaModel2005C++.vcproj
+++ b/trunk/malariaModel2005C++.vcproj
@@ -294,10 +294,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\include\noVectorControl.h"
-				>
-			</File>
-			<File
 				RelativePath=".\include\OldCaseManagement.h"
 				>
 			</File>
@@ -331,14 +327,6 @@
 			</File>
 			<File
 				RelativePath=".\include\transmissionModel.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\vectorControl.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\VectorControlInternal.h"
 				>
 			</File>
 			<File
@@ -397,6 +385,22 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="TransmissionModel"
+				>
+				<File
+					RelativePath=".\include\TransmissionModel\NonVector.h"
+					>
+				</File>
+				<File
+					RelativePath=".\include\TransmissionModel\Vector.h"
+					>
+				</File>
+				<File
+					RelativePath=".\include\TransmissionModel\VectorInternal.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="model"
@@ -442,10 +446,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\model\noVectorControl.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\model\OldCaseManagement.cpp"
 				>
 			</File>
@@ -479,14 +479,6 @@
 			</File>
 			<File
 				RelativePath=".\model\transmissionModel.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\model\vectorControl.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\model\VectorControlInternal.cpp"
 				>
 			</File>
 			<File
@@ -542,6 +534,22 @@
 				</File>
 				<File
 					RelativePath=".\model\WithinHostModel\OldIPTInfection.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="TransmissionModel"
+				>
+				<File
+					RelativePath=".\model\TransmissionModel\NonVector.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\model\TransmissionModel\Vector.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\model\TransmissionModel\VectorInternal.cpp"
 					>
 				</File>
 			</Filter>
