Better include paths for malariaModel. Fixed LIBCMT ignore.
git-svn-id: https://openmalaria.googlecode.com/svn@146 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/malariaModel2005C++.vcproj
+++ b/trunk/malariaModel2005C++.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="D:\data\workspace\boinc\lib;D:\data\workspace\boinc\api;xsdcxx;include"
+				AdditionalIncludeDirectories="..\boinc\api;..\boinc\lib;..\boinc;xsdcxx;include;&quot;C:\Program Files\CodeSynthesis XSD 3.2\xerces-c-3.0.1\src&quot;;&quot;C:\Program Files\CodeSynthesis XSD 3.2\include&quot;;&quot;C:\Program Files\GnuWin32\gsl-111\gsl\win32\include&quot;"
 				PreprocessorDefinitions="WIN32;_WIN32;_WINDOWS;_NO_GRAPHICS;_GRAPHICS_6;XERCES_STATIC_LIBRARY;WITHOUT_BOINC"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -81,7 +81,7 @@
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=".\Debug;.\lib"
 				IgnoreAllDefaultLibraries="false"
-				IgnoreDefaultLibraryNames="LIBCMT.LIB"
+				IgnoreDefaultLibraryNames="LIBCMTD.lib"
 				DelayLoadDLLs=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/malariaModel.pdb"
@@ -145,7 +145,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="..\boinc\api;..\boinc\lib;..\boinc;xsdcxx;include"
+				AdditionalIncludeDirectories="..\boinc\api;..\boinc\lib;..\boinc;xsdcxx;include;&quot;C:\Program Files\CodeSynthesis XSD 3.2\xerces-c-3.0.1\src&quot;;&quot;C:\Program Files\CodeSynthesis XSD 3.2\include&quot;;&quot;C:\Program Files\GnuWin32\gsl-111\gsl\win32\include&quot;"
 				PreprocessorDefinitions="WIN32;_WIN32;_WINDOWS;_NO_GRAPHICS;WITHOUT_BOINC;XERCES_STATIC_LIBRARY"
 				StringPooling="false"
 				RuntimeLibrary="0"
@@ -173,13 +173,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="xerces-c_static_3D.lib gsl_mt.lib cblas_mt.lib delayimp.lib"
+				AdditionalDependencies="xerces-c_static_3.lib gsl_mt.lib cblas_mt.lib delayimp.lib"
 				OutputFile=".\Release/malariacontrol_6.12_windows_intelx86"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=".\Release;.\lib"
 				IgnoreAllDefaultLibraries="false"
-				IgnoreDefaultLibraryNames=""
+				IgnoreDefaultLibraryNames="LIBCMT.lib"
 				DelayLoadDLLs="GDI32.dll;OPENGL32.dll;GLU32.dll"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Release/malariacontrol_6.12_windows_intelx86.pdb"
