--- a/trunk/malariaModel2005C++BOINC.vcproj
+++ b/trunk/malariaModel2005C++BOINC.vcproj
@@ -81,7 +81,7 @@
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\boinc\win_build\Build\Win32\Debug;.\Debug;.\lib"
 				IgnoreAllDefaultLibraries="false"
-				IgnoreDefaultLibraryNames="LIBCMT.LIB"
+				IgnoreDefaultLibraryNames="LIBCMTD.LIB"
 				DelayLoadDLLs=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/malariaModel.pdb"
@@ -178,7 +178,7 @@
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\boinc\win_build\Build\Win32\Release;.\Release;.\lib"
 				IgnoreAllDefaultLibraries="false"
-				IgnoreDefaultLibraryNames=""
+				IgnoreDefaultLibraryNames="LIBCMT.lib"
 				DelayLoadDLLs="GDI32.dll;OPENGL32.dll;GLU32.dll"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Release/malariacontrol_6.12_windows_intelx86.pdb"
