Initialisation EIR should now be set correctly for VectorTransmission (not tested).
git-svn-id: https://openmalaria.googlecode.com/svn@166 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -6,7 +6,7 @@ all: xsdcxx model
 	test -x runTests.sh || ln -s @top_srcdir@/runTests.sh ./
 
 test: all
-	./runTests.sh
+	./runTests.sh --checkpoint
 
 doxygen: config.doxygen
 	-doxygen config.doxygen
