Fixes for IPT code plus test-case, fix for build system.
Added an IPT test scenario.
Fixed a bug with IPT-code logic introduced in my cleanup.
Fixed an older bug, where the same code didn't deal with modular arithmatic correctly.

git-svn-id: https://openmalaria.googlecode.com/svn@172 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/Makefile.am
+++ b/trunk/model/Makefile.am
@@ -11,9 +11,9 @@ openMalaria_SOURCES = openMalaria.cpp\
  EntoIntervention.cpp\
  PresentationModel.cpp
 
-openMalaria_DEPENDENCIES =  $(top_builddir)/xsdcxx/libxsdcxx.a
+openMalaria_DEPENDENCIES =  $(top_builddir)/xsdcxx/libxsdcxx.a PresentationModel/libPresentationModel.a WithinHostModel/libWithinHostModel.a TransmissionModel/libTransmissionModel.a
 
-openMalaria_LDADD = $(top_builddir)/xsdcxx/libxsdcxx.a PresentationModel/libPresentationModel.a WithinHostModel/libWithinHostModel.a TransmissionModel/libTransmissionModel.a\
+openMalaria_LDADD = $(openMalaria_DEPENDENCIES)\
  -L@top_builddir@/lib @LIB_XERC@ @LIB_GSL@ @LIB_GSLCBLAS@ @LIB_BOINC@ @LIB_BOINC_API@ 
 
 AM_CPPFLAGS = @CPPFLAGS@ @BOINC_CFLAGS@ -I$(top_srcdir)/include -I@top_builddir@/xsdcxx
