--- a/trunk/.gitignore
+++ b/trunk/.gitignore
@@ -2,3 +2,6 @@
 html
 aclocal.m4
 autom4te.cache
+# These two folders are tracked in svn anyway (git won't track folders).
+util/SchemaTranslator/scenarios
+util/SchemaTranslator/translatedScenarios
