PkPd renamed to DummyPkPd
git-svn-id: https://openmalaria.googlecode.com/svn@565 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/unittest/CMakeLists.txt
+++ b/trunk/unittest/CMakeLists.txt
@@ -65,7 +65,7 @@ set (OM_CXXTEST_HEADERS
   PerHostTransmissionSuite.h
   #VectorAnophelesSuite.h needs updating for vector model changes
   ExtraAsserts.h	# must appear after at least some of the above
-  PkPdDrugSuite.h
+  DummyPkPdDrugSuite.h
 )
 
 if (OM_CXXTEST_INTERPRETER)
