Renamed DummyPkPdDrug to DummyPkPdDrugModel for consistency
git-svn-id: https://openmalaria.googlecode.com/svn@566 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -18,7 +18,7 @@ set (Model_CPP
   Clinical/Episode.cpp
   
   Drug/DrugModel.cpp
-  Drug/DummyPkPdDrug.cpp
+  Drug/DummyPkPdDrugModel.cpp
   Drug/drug.cpp
   
   Pathogenesis/PathogenesisModel.cpp
