Simple file refactoring
git-svn-id: https://openmalaria.googlecode.com/svn@567 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -17,9 +17,11 @@ set (Model_CPP
   Clinical/OldCaseManagement.cpp
   Clinical/Episode.cpp
   
+  Drug/Dose.cpp
+  Drug/Drug.cpp
   Drug/DrugModel.cpp
   Drug/DummyPkPdDrugModel.cpp
-  Drug/drug.cpp
+  Drug/DrugType.cpp
   
   Pathogenesis/PathogenesisModel.cpp
   Pathogenesis/Mueller.cpp
