Drug module refactoring to allow new model
git-svn-id: https://openmalaria.googlecode.com/svn@568 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -20,6 +20,7 @@ set (Model_CPP
   Drug/Dose.cpp
   Drug/Drug.cpp
   Drug/DrugModel.cpp
+  Drug/DummyPkPdDrug.cpp
   Drug/DummyPkPdDrugModel.cpp
   Drug/DrugType.cpp
   
