Scaffolding code for the PkPd stuff
git-svn-id: https://openmalaria.googlecode.com/svn@572 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -20,9 +20,11 @@ set (Model_CPP
   Drug/Dose.cpp
   Drug/Drug.cpp
   Drug/DrugInteractions.cpp
+  Drug/DrugType.cpp
   Drug/DummyPkPdDrug.cpp
   Drug/DummyPkPdDrugInteractions.cpp
-  Drug/DrugType.cpp
+  Drug/PkPdDrug.cpp
+  Drug/PkPdDrugInteractions.cpp
   
   Pathogenesis/PathogenesisModel.cpp
   Pathogenesis/Mueller.cpp
